[project]
name = "tx"
version = "0.0.1"
description = "My project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["h5py"]
authors = [
    {name = "Alma Partos", email = "partos@doktorant.umk.pl"},
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
