[project]
name = "tx"
version = "0.0.1"
description = "A program for tensor cross interpolation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["h5py", "numpy"]
authors = [
    {name = "Alma Partos", email = "partos@doktorant.umk.pl"},
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
license = "MIT"
